Your commit message here

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
+{% load static %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Tick</title>
+  <title>Webleb</title>
+  <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <!-- Add other common CSS stylesheets here -->
+  <link rel="stylesheet" href="{% static 'styles/main.css' %}">
 </head>
 <body>
+
     {% include 'navbar.html' %}
 
     {% if messages %}
@@ -15,8 +23,11 @@
 </ul>
 {% endif %}
 
+  <div class="container">
     {% block content %}
 
-    {% endblock %}
+    {% endblock content %}
+  <script src="{% static 'js/script.js' %}"></script>
+  </div>
 </body>
 </html>
