--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,19 +5,19 @@
     <title>Title</title>
   </head>
   <body>
- {% extends 'main.html'%}
-
- {% block content %}
+    {% extends 'main.html'%} {% block content %}
     <h1>Home Template</h1>
-     <div>
+    <div>
+      <div>
+        {% for room in rooms %}
         <div>
-         {%  for room in rooms %}
-             <div>
-                 <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
-             </div>
-            {% endfor %}
+          <h5>
+            {{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a>
+          </h5>
         </div>
-     </div>
-  {% endblock content%}
+        {% endfor %}
+      </div>
+    </div>
+    {% endblock content%}
   </body>
 </html>
