--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -795,7 +795,7 @@ a {
 
 .navbar {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-  background-color: rgba(0,0,0,0.5);;
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 1rem 1.15rem;
   border-bottom: 1px solid #eceef3;
   /*
