--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -28,14 +28,22 @@
                         <div class="center-wrap">
                           <div class="section text-center">
                             <h4 class="mb-4 pb-3">Autentificare</h4>
-                            <form method="POST" action="{% url 'login' %}">
+                            <form
+                              method="POST"
+                              action="{% url 'login_register' %}"
+                            >
                               {% csrf_token %}
+                              <input
+                                type="hidden"
+                                name="form_type"
+                                value="login"
+                              />
                               <div class="form-group">
                                 <input
                                   type="text"
                                   name="username"
                                   class="form-style"
-                                  placeholder="Username"
+                                  placeholder="Nume utilizator"
                                 />
                                 <i class="input-icon uil uil-user"></i>
                               </div>
@@ -48,11 +56,14 @@
                                 />
                                 <i class="input-icon uil uil-lock-alt"></i>
                               </div>
-                              <input
+                              <button
                                 type="submit"
+                                name="submit"
+                                value="sign_in"
                                 class="btn mt-4"
-                                value="Autentificare"
-                              />
+                              >
+                                Autentificare
+                              </button>
                             </form>
                             {% if messages %}
                             <ul class="messages">
@@ -71,47 +82,93 @@
                           </div>
                         </div>
                       </div>
+
                       <div class="card-back">
                         <div class="center-wrap">
                           <div class="section text-center">
                             <h4 class="mb-3 pb-3">Înregistrare</h4>
-                            <div class="form-group">
-                              <input
-                                type="text"
-                                class="form-style"
-                                placeholder="Nume complet"
-                              />
-                              <i class="input-icon uil uil-user"></i>
-                            </div>
-                            <div class="form-group mt-2">
-                              <input
-                                type="tel"
-                                class="form-style"
-                                placeholder="Număr de telefon"
-                              />
-                              <i class="input-icon uil uil-phone"></i>
-                            </div>
-                            <div class="form-group mt-2">
-                              <input
-                                type="email"
-                                class="form-style"
-                                placeholder="Email"
-                              />
-                              <i class="input-icon uil uil-at"></i>
-                            </div>
-                            <div class="form-group mt-2">
-                              <input
-                                type="password"
-                                class="form-style"
-                                placeholder="Parolă"
-                              />
-                              <i class="input-icon uil uil-lock-alt"></i>
-                            </div>
-                            <a
-                              href="https://www.web-leb.com/code"
-                              class="btn mt-4"
-                              >Înregistrare</a
+
+                            <form
+                              method="POST"
+                              action="{% url 'login_register' %}"
                             >
+                              {% csrf_token %}
+                              <input
+                                type="hidden"
+                                name="form_type"
+                                value="register"
+                              />
+                              {% if form.non_field_errors %}
+                              <div class="errors">
+                                {% for error in form.non_field_errors %}
+                                <p>{{ error }}</p>
+                                {% endfor %}
+                              </div>
+                              {% endif %}
+
+                              <!-- Renderizează manual câmpul de utilizator -->
+                              <div class="form-group mt-2">
+                                <input
+                                  type="text"
+                                  name="{{ form.username.name }}"
+                                  class="form-style"
+                                  placeholder="Nume complet"
+                                  value="{{ form.username.value|default_if_none:'' }}"
+                                />
+                                <i class="input-icon uil uil-user"></i>
+                                {% if form.username.errors %}
+                                <div class="errors">
+                                  {% for error in form.username.errors %}
+                                  <p>{{ error }}</p>
+                                  {% endfor %}
+                                </div>
+                                {% endif %}
+                              </div>
+
+                              <!-- Manually render the password field -->
+                              <div class="form-group mt-2">
+                                <input
+                                  type="password"
+                                  name="{{ form.password1.name }}"
+                                  class="form-style"
+                                  placeholder="Parolă"
+                                />
+                                <i class="input-icon uil uil-lock-alt"></i>
+                                {% if form.password1.errors %}
+                                <div class="errors">
+                                  {% for error in form.password1.errors %}
+                                  <p>{{ error }}</p>
+                                  {% endfor %}
+                                </div>
+                                {% endif %}
+                              </div>
+
+                              <!-- Manually render the password confirmation field -->
+                              <div class="form-group mt-2">
+                                <input
+                                  type="password"
+                                  name="{{ form.password2.name }}"
+                                  class="form-style"
+                                  placeholder="Confirmare parolă"
+                                />
+                                <i class="input-icon uil uil-lock-alt"></i>
+                                {% if form.password2.errors %}
+                                <div class="errors">
+                                  {% for error in form.password2.errors %}
+                                  <p>{{ error }}</p>
+                                  {% endfor %}
+                                </div>
+                                {% endif %}
+                              </div>
+
+                              <button
+                                type="submit"
+                                value="sign_up"
+                                class="btn mt-4"
+                              >
+                                Înregistrare
+                              </button>
+                            </form>
                           </div>
                         </div>
                       </div>
@@ -126,4 +183,5 @@
     </div>
   </div>
 </div>
+
 {% endblock content %}
